# etest

./: CMakeLists.txt  LICENSE  README.md
include/etest/: etest.h  test.h
include/etest/internal/: macro_magic.h  test.h  test_factory.h  test_info.h  test_macros.h  test_suite.h
src/: etest.cpp  test.cpp  test_info.cpp  test_suite.cpp
src/internal/: test.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test_arithmetic_types.cpp  test_assertions.cpp  test_strings.cpp  test_user_defined_types.cpp
